fixed layout issue for view names

--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -91,7 +91,6 @@ ul {
   padding: .5rem .75rem;
   margin-left: -1px;
   line-height: 1.25;
-  font-size: 1.2em !important;
   color: #14123F !important;
   text-decoration: none !important;
 }
